--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -91,10 +91,10 @@
 		height: 50% !important;
 	}
 	*[data-count='one']:hover{
-		background-position: -100px !important;
+		background-position: -10px !important;
 	}
 	*[data-count='two']:hover {
-		background-position: -10px !important;
+		background-position: -0px !important;
 	}
 	*[data-count='three']:hover {
 		background-position: -0px !important;
@@ -199,7 +199,10 @@
 /*smartphone*/
 @media screen and (max-width: 640px){ 
 	/* Smartphones */
-  	.panel{
+	svg{
+		width:600px !important;
+	}
+ 	.panel{
 	    width: 50% !important;
 	    height: 50% !important;
 	    float: left !important;
