--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1576,3 +1576,13 @@ label{
     overflow: scroll;
     max-height: 300px;
 }
+
+.show-on-small{
+    display:none !important;
+}
+
+@media only screen and (max-width: 600px) {
+    .show-on-small {
+        display: block !important
+    }
+}
