--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1573,8 +1573,8 @@ label{
     height: 20%;
 }
 #why-deegeelab .collapsible-body{
-    overflow: scroll;
-    max-height: 300px;
+    /* overflow: scroll; */
+    max-height: 500px;
 }
 
 .show-on-small{
