--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -202,7 +202,7 @@
 		padding: unset !important;
 	}
 	.form_holder {
-		border-top: unset !important;
+		/* border-top: unset !important; */
 	}
 	#form_query .col {
 		padding: unset !important;
