--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1504,7 +1504,7 @@ p.label {
     margin-right:10px;
 }
 .footer-section {
-     /*position: fixed;*/
+     /* position: fixed; */
      bottom: 0%;
      /*height: 50px;*/
      width: 100%;
@@ -1513,6 +1513,7 @@ p.label {
      background-color: rgba(0, 0, 0, 1);
      z-index:  10000;
      margin-bottom: 0px !important;
+     /* top: 20px; */
 }
 #fp-nav{
     display:none;
