--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -122,9 +122,9 @@
 	.loading .main-section .stage{
 		height: 75%;
 	}
-	.node .title{
+	/*.node .title{
 		display: block !important;
-	}
+	}*/
 	svg{
 		width:350px !important;
 	}
